compiler/testData/diagnostics/tests/inference/underscoredTypeArgumentInErroneousCall.fir.kt
// ISSUE: KT-69739

import <!UNRESOLVED_IMPORT!>some<!>.convTo

fun main() {
    <!UNRESOLVED_REFERENCE!>convTo<!><_>()
    <!UNRESOLVED_REFERENCE!>convTo<!><_>
}
